# MapFemRS

./: .gitignore  README.md  requirements.txt
api/: pyproject.toml
api/data/2018/: Ameaça.csv  Estupro.csv  Feminicídio Consumado.csv  Feminicídio Tentado.csv  Lesão Corporal.csv
api/data/2019/: Ameaça.csv  Estupro.csv  Feminicídio Consumado.csv  Feminicídio Tentado.csv  Lesão Corporal.csv
api/data/2020/: Ameaça.csv  Estupro.csv  Feminicídio Consumado.csv  Feminicídio Tentado.csv  Lesão Corporal.csv
api/data/2021/: Ameaça.csv  Estupro.csv  Feminicídio Consumado.csv  Feminicídio Tentado.csv  Lesão Corporal.csv
api/data/2022/: Ameaça.csv  Estupro.csv  Feminicídio Consumado.csv  Feminicídio Tentado.csv  Lesão Corporal.csv
api/data/2023/: Ameaça.csv  Estupro.csv  Feminicídio Consumado.csv  Feminicídio Tentado.csv  Lesão Corporal.csv
api/data/2024/: Ameaça.csv  Estupro.csv  Feminicídio Consumado.csv  Feminicídio Tentado.csv  Lesão Corporal.csv
raw/: .#main.py  data.py  main.py  test.ipynb
scrapper/: pyproject.toml  scrapper.py  transform.py
scrapper/raw/: 2017.xlsx  2018.xlsx  2019.xlsx  2020.xlsx  2021.xlsx  2022.xlsx  2023.xlsx  2024.xlsx
src/: main.py  scrapper.py
